<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Keep Together</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">Setting</string>
    <string name="save_button">Save</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="action_add_new_event">Add Event</string>
    <string name="member_name_TV">Member name:</string>
    <string name="event_TV">Event:</string>
    <string name="add_new_event_BT">Add</string>
    <string name="color_TV">Color:</string>
     <string name="title_activity_login">LoginActivity</string>
    <string name="login_email_TV">Email:</string>
    <string name="login_password_TV">Password:</string>
    <string name="sign_up_BT">Sign up</string>
    <string name="login_BT">Sign in</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_email">enter a valid email</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="app_key">4NH6F5TWo5Mn9H7hyesQfaFqmLm6YqgyG9q3L06u</string>
    <string name="client_key">RLwcsKj1Cg9Me9a7fuewNjKQRgbHG8THnvHo4I1J</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_ET_hint">Family shared email</string>
    <string name="email_ET">Email:</string>
    <string name="member_name_ET_hint">Member name</string>
    <string name="password_ET_hint">Family shared password</string>
    <string name="match_password_TV">Password again:</string>
    <string name="match_password_ET_hint">Password again</string>
    <string name="error_blank_member_name">enter a member name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_member_name_TV">Select member name:</string>
    <string name="create_member_name_TV">or create a new one?</string>
    <string name="save_member_name_BT">Create</string>
    <string name="action_help_and_about"><![CDATA[Help & About]]></string>
    <string name="setting_family_acount_TV">Family acount:</string>
    <string name="setting_member_name_TV">Member name:</string>
    <string name="setting_color_TV">Color:</string>
    <string name="log_out_BT">Sign out</string>
    <string name="event_title_TV">Title:</string>
    <string name="event_title_hint">Enter title</string>
    <string name="event_start_time_TV">Start time:</string>
    <string name="event_end_time_TV">End time:</string>
    <string name="event_notification_TV">Alert:</string>
    <string name="event_note_TV">Note:</string>
    <string name="event_note_hint">Add description</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="delete_event_BT">Delete</string>
    <string name="event_notify_others_option">Notify other members</string>
    <string name="title_activity_dispatch">Keep Together</string>
    <string name="google_calendar_setting_TV">Google Calendar:</string>
    <string name="setting_google_calendar_hint">Tap to set Google Calendar</string>
    <string name="select_calendar_list_dialog_title">Select Calendars</string>
    <string name="ok">Save</string>
    <string name="cancel">Cancel</string>
    <string name="save_event_button">Save</string>
    <string name="upload_to_google_calendar">Sync with Google Calendar</string>
    <string name="other_members_color">Tap to see other members color...</string>
    <string name="setting_save_button">Save</string>
    <string name="save_in_setting_text">SAVE</string>
    <string name="error_password_short">password is too short</string>
    <string name="sign_up_button_hint_part1">Don\'t have an account?</string>
    <string name="sign_up_button_hint_part2">" Sign up"</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="member_pin_hint">Member PIN</string>
    <string name="create_member_pin_edit_text">PIN number</string>
    <string name="all_day_setting_text_view">All day</string>
    <string name="new_event_alert_text_view">Notification</string>
    <string name="delete_sign">×</string>


    <string-array name="weekday_list">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string-array name="alert_time_spinner_list">
        <item>Off</item>
        <item>At time of event</item>
        <item>5 minutes before</item>
        <item>half hour before</item>
        <item>1 hour before</item>
        <item>2 hours before</item>
        <item>1 day before</item>
    </string-array>
</resources>
