<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_add_new_event"
        android:title="@string/action_add_new_event"
        android:icon="@drawable/add_new_event_icon"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@drawable/setting_icon"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_help_and_about"
        android:title="@string/action_help_and_about"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
