<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/sign_in_up_lr_padding"
    android:paddingRight="@dimen/sign_in_up_lr_padding"
    tools:context="com.xg.keepittogether.SignUpActivity"
    android:background="@drawable/login_background_with_gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/keep_together_icon_signin_page"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:textColor="@color/login_page_app_name_silver"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/sign_in_up_ud_padding"
        android:paddingBottom="@dimen/sign_in_up_ud_padding"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email_outline_grey600_36dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpEmailET"
            android:hint="@string/email_ET_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/edit_text_hint_grey"
            android:textColor="@color/edit_text_white_color"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/sign_in_up_ud_padding"
        android:paddingBottom="@dimen/sign_in_up_ud_padding"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_outline_grey600_36dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/signUpPasswordET"
            android:hint="@string/password_ET_hint"
            android:textColorHint="@color/edit_text_hint_grey"
            android:textColor="@color/edit_text_white_color"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/sign_in_up_ud_padding"
        android:paddingBottom="@dimen/sign_in_up_ud_padding"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock_outline_grey600_36dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/matchPasswordET"
            android:hint="@string/match_password_ET_hint"
            android:textColorHint="@color/edit_text_hint_grey"
            android:textColor="@color/edit_text_white_color"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/sign_in_up_ud_padding"
        android:paddingBottom="@dimen/sign_in_up_ud_padding"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account_outline_grey600_36dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpMemberNameET"
            android:hint="@string/member_name_ET_hint"
            android:textColorHint="@color/edit_text_hint_grey"
            android:textColor="@color/edit_text_white_color"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/sign_in_up_ud_padding"
        android:paddingBottom="@dimen/sign_in_up_ud_padding"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account_key_grey600_36dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpMemberPINET"
            android:hint="@string/member_pin_hint"
            android:textColorHint="@color/edit_text_hint_grey"
            android:textColor="@color/edit_text_white_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/sign_in_up_ud_padding"
        android:paddingBottom="@dimen/sign_in_up_ud_padding">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_button_min_height_material"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sign_up_BT"
            android:id="@+id/signUpBT"
            android:gravity="center"
            android:background="@color/text_button"
            android:textColor="@color/edit_text_white_color"
            android:clickable="true"
            android:onClick="signUp"/>
    </LinearLayout>
</LinearLayout>
